# RustyCar

./: .gitignore  Cargo.toml  TODO  info.txt  readme.md
assets/models/: wheel.glb
assets/models/animals/: butterfly.glb  butterfly_1.glb  butterfly_2.glb  butterfly_3.glb
assets/models/building/: well.glb
assets/models/ground/: dirt.glb  grass.glb  grass_1.glb  grass_2.glb  grass_3.glb  grass_4.glb  grass_5.glb  grass_6.glb  grass_7.glb  test.glb
assets/models/infra/: fence_1.glb  fence_2.glb  fence_3.glb  fence_4.glb  fence_corner_1.glb  fence_corner_2.glb
assets/models/nature/: flower_1.glb  flower_2.glb  flower_3.glb  flower_4.glb  flower_5.glb  flower_6.glb  flower_7.glb  flower_8.glb  ground.glb  log.glb  log_1.glb  log_2.glb  log_3.glb  mushroom_1.glb  (+13 more)
src/: main.rs  utils.rs  world_config.rs
src/animal/: behaviors.rs  components.rs  globals.rs  mod.rs  natural_fly_path.rs  spawn.rs  systems.rs  utils.rs
src/building/: components.rs  mod.rs  spawn.rs
src/car/: components.rs  globals.rs  mod.rs  spawn.rs  systems.rs
src/collision/: components.rs  mod.rs  spawn.rs  systems.rs  theorem.rs  utils.rs
src/config/: mod.rs  world_config.rs
src/environment/: components.rs  mod.rs  spawn.rs
src/extra/: components.rs  math.rs  mod.rs  noise.rs  utils.rs
src/infra/: components.rs  mod.rs  spawn.rs
src/nature/: components.rs  mod.rs  spawn.rs
src/physics/: components.rs  effects.rs  mod.rs  systems.rs  theorem.rs  utils.rs
src/world/: components.rs  grass.rs  mod.rs  patch.rs  spawn.rs  spawn_land.rs  spawn_models.rs  tile_pos.rs  utils.rs
(+17 files in other folders)
